scripts/nullness/nullgtn/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8.txt
../nullgtn/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/statements/Move.java:17: error: [initialization.field.uninitialized] the default constructor does not initialize field curPos
    protected Position curPos;
                       ^
../nullgtn/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/statements/Move.java:27: error: [initialization.field.uninitialized] the default constructor does not initialize field lastMovedDistance
    protected Numbers lastMovedDistance;
                      ^
../nullgtn/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/expressions/Exp.java:15: error: [initialization.fields.uninitialized] the constructor does not initialize fields: result
    public Exp() {
           ^
../nullgtn/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/expressions/Numbers.java:46: error: [override.param] Incompatible parameter type for o.
    public boolean equals(Object o) {
                                 ^
  found   : @Initialized @NonNull Object
  required: @Initialized @Nullable Object
  Consequence: method in @Initialized @NonNull Numbers
    @Initialized @NonNull boolean equals(@Initialized @NonNull Numbers this, @Initialized @NonNull Object p0)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull boolean equals(@Initialized @NonNull Object this, @Initialized @Nullable Object p0)
../nullgtn/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/util/Position.java:120: error: [override.param] Incompatible parameter type for o.
    public boolean equals(Object o) {
                                 ^
  found   : @Initialized @NonNull Object
  required: @Initialized @Nullable Object
  Consequence: method in @Initialized @NonNull Position
    @Initialized @NonNull boolean equals(@Initialized @NonNull Position this, @Initialized @NonNull Object p0)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull boolean equals(@Initialized @NonNull Object this, @Initialized @Nullable Object p0)
../nullgtn/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/statements/VarDecl.java:40: error: [override.param] Incompatible parameter type for o.
    public boolean equals(Object o) {
                                 ^
  found   : @Initialized @NonNull Object
  required: @Initialized @Nullable Object
  Consequence: method in @Initialized @NonNull VarDecl
    @Initialized @NonNull boolean equals(@Initialized @NonNull VarDecl this, @Initialized @NonNull Object p0)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull boolean equals(@Initialized @NonNull Object this, @Initialized @Nullable Object p0)
../nullgtn/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/expressions/Identifier.java:42: error: [override.param] Incompatible parameter type for o.
    public boolean equals(Object o) {
                                 ^
  found   : @Initialized @NonNull Object
  required: @Initialized @Nullable Object
  Consequence: method in @Initialized @NonNull Identifier
    @Initialized @NonNull boolean equals(@Initialized @NonNull Identifier this, @Initialized @NonNull Object p0)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull boolean equals(@Initialized @NonNull Object this, @Initialized @Nullable Object p0)
../nullgtn/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/statements/IfThenElse.java:20: error: [initialization.fields.uninitialized] the constructor does not initialize fields: elseStmtList
    public IfThenElse(BooleanExp boolE, Stmt[] ifStmtList) {
           ^
../nullgtn/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/expressions/BooleanExp.java:16: error: [initialization.fields.uninitialized] the constructor does not initialize fields: result
    public BooleanExp(Exp e1, Booleans booleanValue, Exp e2) {
           ^
../nullgtn/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/expressions/BooleanExp.java:20: error: [method.invocation] call to interpret() not allowed on the given receiver.
        interpret();
                 ^
  found   : @UnderInitialization(expressions.Exp.class) @NonNull BooleanExp
  required: @Initialized @NonNull BooleanExp
../nullgtn/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/util/Grid.java:26: error: [method.invocation] call to setSizeGlobal(statements.Size) not allowed on the given receiver.
        setSizeGlobal(sizeIns);
                     ^
  found   : @UnderInitialization(util.Grid.class) @NonNull Grid
  required: @Initialized @NonNull Grid
../nullgtn/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/util/Program.java:56: error: [method.invocation] call to printWelcome() not allowed on the given receiver.
        printWelcome();
                    ^
  found   : @UnderInitialization(util.Program.class) @NonNull Program
  required: @Initialized @NonNull Program
../nullgtn/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/util/Program.java:58: error: [method.invocation] call to makePrettyPrint(java.lang.String) not allowed on the given receiver.
        makePrettyPrint(name);
                       ^
  found   : @UnderInitialization(util.Program.class) @NonNull Program
  required: @Initialized @NonNull Program
../nullgtn/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/util/Robot.java:76: error: [return] incompatible types in return.
        return varDecls.get(ident);
                           ^
  type of expression: @Initialized @Nullable VarDecl
  method return type: @Initialized @NonNull VarDecl
../nullgtn/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/exceptions/RobotOutOfGridException.java:12: error: [method.invocation] call to printStackTrace() not allowed on the given receiver.
        printStackTrace();
                       ^
  found   : @UnderInitialization(exceptions.RobotOutOfGridException.class) @NonNull Throwable
  required: @Initialized @NonNull Throwable
../nullgtn/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/expressions/PlusExp.java:21: error: [method.invocation] call to interpret() not allowed on the given receiver.
        interpret();
                 ^
  found   : @UnderInitialization(expressions.PlusExp.class) @NonNull PlusExp
  required: @Initialized @NonNull PlusExp
16 errors
